--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -17,7 +17,7 @@
     <appender name="ADONetAppender" type="log4net.Appender.ADONetAppender">
       <bufferSize value="100" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString name="Log4Net" value="data source=.\DEVINSSQLSERVER;initial catalog=devinmajordotcom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
+      <connectionString name="Log4Net" value="data source=.\DEVINSSQLEXPRESS;initial catalog=devinmajordotcom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
       <commandText value="INSERT INTO [Security].[Log4NetLog] ([Date],[Thread],[Level],[Logger],[Message],[Exception], [UserId], [Action], [Controller], [Params]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception, @userid, @action,@controller, @params)" />
       <parameter>
         <parameterName value="@log_date" />
@@ -97,7 +97,7 @@
     </appender>
   </log4net>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLSERVER;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
